[package]
name = "merlen"
version = "0.1.0"
edition = "2021"

[features]
default = ["gc"]
gc = ["dumpster", "itertools"]

[dependencies]
dumpster = { optional = true, version = "0.2.1", features = ["derive"] }
itertools = { optional = true, version = "0.13.0" }
thiserror = "1.0.61"
bytemuck = { version = "1.16.0", features = ["must_cast"] }
