[package]
name = "robyn"
version = "0.1.0-alpha"
description = "A Rust MLIR sidekick"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/xdslproject/robyn"

[features]
default = ["gc"]
gc = ["dumpster", "itertools"]

[dependencies]
dumpster = { optional = true, version = "0.2.1", features = ["derive"] }
itertools = { optional = true, version = "0.13.0" }
thiserror = "1.0.61"
bytemuck = { version = "1.16.0", features = ["must_cast"] }
ariadne = "0.4.1"
